Add description to stand / Day

--- a/sponsor.html
+++ b/sponsor.html
@@ -952,6 +952,36 @@
                     </tr>
                     <tr class="item">
                       <td><div class="toggle">+</div>Stand / Day</td>
+                        <tr class="description"><td class="noPadding">
+                          <div class="shadow">
+                            <h3>Stand / Day</h3>
+                            <p>You will have the possibility to rent a (or bring your own) stand during the event, at Instituto Superior Técnico.</p>
+                            <p>IST stand specifications:</p>
+                            <ul>
+                              <li>Dimensions: 3x3x2.5m;</li>
+                              <li>Carpeted;</li>
+                              <li>Back wall. (Side walls in case of being next to another stand);</li>
+                              <li>Electricity - three (3) plugs;</li>
+                              <li>Lights - three (3) spot lights;</li>
+                              <li>Lettering with the company’s name;</li>
+                              <li>Two (2) tables;</li>
+                              <li>Two (2) chairs;</li>
+                              <li>In the case of use of your own stand, the walls and lettering are removed.</li>
+                            </ul>
+                              <div class="column-group push-center half-gutters">
+                                <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                                  <img src="img/sponsors/stand_1.jpg">
+                                </div>
+                                <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                                  <img src="img/sponsors/stand_2.jpg">
+                                </div>
+                              </div>
+                              <li>Stands layout on the technological exposition in the Civil Engineering Building:<li>
+                              <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                                <img src="img/sponsors/MapaStandsCivil.jpg">
+                              </div>
+                            </div>
+                          </td></tr>
                     </tr>
                     <tr class="item alternate">
                       <td><div class="toggle">+</div>Late Meetup</td>
