Fixed a few typos

--- a/sponsor.html
+++ b/sponsor.html
@@ -68,7 +68,7 @@
 					<li><a href="#reasons">Reasons to sponsor</a></li>
           <li><a href="#curricula">Curricula</a></li>
 					<li><a href="#conditions">Sponsorship conditions</a></li>
-					<li><a href="#startups">StartUps</a></li>
+					<li><a href="#startups">Startups</a></li>
 					<li><a href="#deadlines">Deadlines</a></li>
 					<li><a href="#more-information">More information</a></li>		
 				</ul>
@@ -87,7 +87,7 @@
 					<li><a href="#reasons">Reasons to sponsor</a></li>
           <li><a href="#curricula">Curricula</a></li>
 					<li><a href="#conditions">Sponsorship conditions</a></li>
-					<li><a href="#startups">StartUps</a></li>
+					<li><a href="#startups">Startups</a></li>
 					<li><a href="#deadlines">Deadlines</a></li>
 					<li><a href="#more-information">More information</a></li>
 				</ul>
@@ -1022,9 +1022,9 @@
 
 			<div id="startups" class="column-group gutters">
 				<div class="all-100">
-					<h2>StartUps</h2>
+					<h2>Startups</h2>
           <p>Are you a startup with less than 5 years looking to show what you do, find collaborators and do some networking?</p>
-					<p>Get in touch with us.</p>
+					<p>Get in touch with us!</p>
 				</div>
 			</div>
 
@@ -1038,7 +1038,7 @@
 			<div id="more-information" class="column-group gutters">
 				<div class="all-100">
 					<h2>For more information</h2>
-					<p>We'd be happy to answer any questions, requests for extra information or alternative small participation raised by reading this page. To do this, do not hesitate to contact us via this form</p>
+					<p>We'd be happy to answer any questions, requests for extra information or alternative small participation raised by reading this page. <br> To do this, do not hesitate to contact us via the following form:</p>
 				</div>
 				<div class="all-100">
 					<form class="ink-form" method="post" action="php/emailRequest.php">
@@ -1058,7 +1058,7 @@
 					            <span class="email-err"></span>
 					        </div>
 					        <div class="control-group all-20 small-100 tiny-100 submit">
-					        	<button class="ink-button" type="submit" name="submit" value="submit">Button</button>
+					        	<button class="ink-button" type="submit" name="submit" value="submit">Send</button>
 					        </div>
 					    </div>
 					</form>
