Corrected some row partitions

--- a/sponsor.html
+++ b/sponsor.html
@@ -688,7 +688,7 @@
                   <table class="all-100">
                     <tbody>
                       <tr class="item">
-                        <td><div class="toggle">+</div>Custom Post(s)</td>
+                        <td class="firstTd"><div class="toggle">+</div>Custom Post(s)</td>
                             <tr class="description"><td class="noPadding">
                                 <div class="shadow">
                                   <h3>Custom Post(s)</h3>
@@ -697,7 +697,7 @@
                               </td></tr>
                       </tr>
                       <tr class="item alternate">
-                        <td><div class="toggle">+</div>Event Sponsorship</td>
+                        <td class="firstTd"><div class="toggle">+</div>Event Sponsorship</td>
                               <tr class="description"><td class="noPadding">
                                 <div class="shadow">
                                   <h3>Event Sponsorship</h3>
@@ -706,7 +706,7 @@
                               </td></tr>
                       </tr>
                       <tr class="item">
-                        <td><div class="toggle">+</div>Logo on standard rollups</td>
+                        <td class="firstTd"><div class="toggle">+</div>Logo on standard rollups</td>
                               <tr class="description"><td class="noPadding">
                                 <div class="shadow">
                                   <h3>Logo on standard rollups</h3>
@@ -724,7 +724,7 @@
                               </td></tr>
                       </tr>
                       <tr class="item alternate">
-                        <td><div class="toggle">+</div>Activity on campus</td>
+                        <td class="firstTd"><div class="toggle">+</div>Activity on campus</td>
                               <tr class="description"><td class="noPadding">
                                 <div class="shadow">
                                   <h3>Activity on campus</h3>
@@ -733,7 +733,7 @@
                               </td></tr>
                       </tr>
                       <tr class="item">
-                        <td><div class="toggle">+</div>Activity on company premises</td>
+                        <td class="firstTd"><div class="toggle">+</div>Activity on company premises</td>
                               <tr class="description"><td class="noPadding">
                                 <div class="shadow">
                                   <h3>Activity on company premises</h3>
@@ -742,7 +742,7 @@
                               </td></tr>
                       </tr>
                       <tr class="item alternate">
-                        <td><div class="toggle">+</div>Annual logo permanently on our website</td>
+                        <td class="firstTd"><div class="toggle">+</div>Annual logo permanently on our website</td>
                               <tr class="description"><td class="noPadding">
                                 <div class="shadow">
                                   <h3>Annual logo permanently on our website</h3>
@@ -751,7 +751,7 @@
                               </td></tr>
                       </tr>
                       <tr class="item">
-                        <td><div class="toggle">+</div>Curricula</td>
+                        <td class="firstTd"><div class="toggle">+</div>Curricula</td>
                               <tr class="description"><td class="noPadding">
                                 <div class="shadow">
                                   <h3>Curricula</h3>
@@ -760,7 +760,7 @@
                               </td></tr>
                       </tr>
                       <tr class="item alternate">
-                        <td><div class="toggle">+</div>Logo on leaflets</td>
+                        <td class="firstTd"><div class="toggle">+</div>Logo on leaflets</td>
                           <tr class="description"><td class="noPadding">
                                   <div class="shadow">
                                     <h3>Logo on leaflets</h3>
@@ -779,7 +779,7 @@
                 <table class="all-100">
                   <tbody>
                     <tr class="item">
-                      <td><div class="toggle">+</div>Presentation</td>
+                      <td class="firstTd"><div class="toggle">+</div>Presentation</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Presentation</h3>
@@ -805,7 +805,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item alternate">
-                      <td><div class="toggle">+</div>Folder's documentation</td>
+                      <td class="firstTd"><div class="toggle">+</div>Folder's documentation</td>
                       <tr class="description"><td class="noPadding">
                         <div class="shadow">
                           <h3>Folder's documentation</h3>
@@ -817,7 +817,7 @@
                       </td></tr>
                     </tr>
                     <tr class="item">
-                      <td><div class="toggle">+</div>Cover's logo</td>
+                      <td class="firstTd"><div class="toggle">+</div>Cover's logo</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Logo on Folders</h3>
@@ -826,7 +826,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item alternate">
-                      <td><div class="toggle">+</div>Logo on our poster</td>
+                      <td class="firstTd"><div class="toggle">+</div>Logo on our poster</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Logo on our poster</h3>
@@ -835,7 +835,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item">
-                      <td><div class="toggle">+</div>Logo in our physical banners</td>
+                      <td class="firstTd"><div class="toggle">+</div>Logo in our physical banners</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Logo in our physical banners</h3>
@@ -853,7 +853,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item alternate">
-                      <td><div class="toggle">+</div>Logo on tray mats</td>
+                      <td class="firstTd"><div class="toggle">+</div>Logo on tray mats</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Logo on tray mats</h3>
@@ -869,7 +869,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item">
-                      <td><div class="toggle">+</div>Logo on online banners</td>
+                      <td class="firstTd"><div class="toggle">+</div>Logo on online banners</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Logo on online banners</h3>
@@ -878,7 +878,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item alternate">
-                      <td><div class="toggle">+</div>Logo on the flyers</td>
+                      <td class="firstTd"><div class="toggle">+</div>Logo on the flyers</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Logo on the flyers</h3>
@@ -896,7 +896,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item">
-                      <td><div class="toggle">+</div>Logo on the event rollups</td>
+                      <td class="firstTd"><div class="toggle">+</div>Logo on the event rollups</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Logo on the event rollups</h3>
@@ -914,7 +914,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item alternate">
-                      <td><div class="toggle">+</div>Logo on the Showcase</td>
+                      <td class="firstTd"><div class="toggle">+</div>Logo on the Showcase</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Logo on the Showcase</h3>
@@ -926,7 +926,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item">
-                      <td><div class="toggle">+</div>Keynote Sponsorshi</td>
+                      <td class="firstTd"><div class="toggle">+</div>Keynote Sponsorshi</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Keynote Sponsorship</h3>
@@ -938,7 +938,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item alternate">
-                      <td><div class="toggle">+</div>Presentation Posts</td>
+                      <td class="firstTd"><div class="toggle">+</div>Presentation Posts</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Presentation Posts</h3>
@@ -951,7 +951,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item">
-                      <td><div class="toggle">+</div>Stand / Day</td>
+                      <td class="firstTd"><div class="toggle">+</div>Stand / Day</td>
                         <tr class="description"><td class="noPadding">
                           <div class="shadow">
                             <h3>Stand / Day</h3>
@@ -984,7 +984,7 @@
                           </td></tr>
                     </tr>
                     <tr class="item alternate">
-                      <td><div class="toggle">+</div>Late Meetup</td>
+                      <td class="firstTd"><div class="toggle">+</div>Late Meetup</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Late Meetup</h3>
@@ -993,7 +993,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item">
-                      <td><div class="toggle">+</div>Custom commercial</td>
+                      <td class="firstTd"><div class="toggle">+</div>Custom commercial</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Custom commercial</h3>
@@ -1002,7 +1002,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item alternate">
-                      <td><div class="toggle">+</div>Logo during the break of our live stream</td>
+                      <td class="firstTd"><div class="toggle">+</div>Logo during the break of our live stream</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Logo during the break of our live stream</h3>
