Corrected some minor stuffs

--- a/sponsor.html
+++ b/sponsor.html
@@ -355,7 +355,7 @@
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>+ University pack</h3>
-                        <p>This pack allows your company the possibility to be present and advertised on all SINFO’s Partner Universities in addition to IST, these Universities are FEUP, FCUL, ISCTE, UM, FCT-UNL, ISEL among others. With this pack your company can unlock the Stand++ enabling it to be present, the same number of days contracted at IST, in the rest of the Partner Universities. This means your company can easily and cheaply double or even triple the number of stand days reaching, not only IST, but many other universities of your choice!</p>
+                        <p>This pack allows your company the possibility to be present and advertised on all SINFO’s Partner Universities in addition to IST, these Universities are FEUP, FCUL, ISCTE, UM, FCT-UNL, ISEL among others. With this pack your company can unlock the <b>Stand++</b> enabling it to be present, the same number of days contracted at IST, in the rest of the Partner Universities. This means your company can easily and cheaply double or even triple the number of stand days reaching, not only IST, but many other universities of your choice!</p>
                       </div>
                    </td></tr>
                   </tr>
@@ -447,7 +447,7 @@
                     </td></tr>
                   </tr>
                   <tr class="item alternate">
-										<td class="firstTd"><div class="toggle">+</div>Cover's logo</td><td>L</td><td>M</td><td>S</td><td>S</td>
+										<td class="firstTd"><div class="toggle">+</div>Logo on Folders</td><td>L</td><td>M</td><td>S</td><td>S</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Logo on Folders</h3>
