Corrected some minor stuffs 2 part

--- a/sponsor.html
+++ b/sponsor.html
@@ -817,7 +817,7 @@
                       </td></tr>
                     </tr>
                     <tr class="item">
-                      <td class="firstTd"><div class="toggle">+</div>Cover's logo</td>
+                      <td class="firstTd"><div class="toggle">+</div>Logo on Folders</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Logo on Folders</h3>
