corrected curricula link and logo on tray mats info

--- a/sponsor.html
+++ b/sponsor.html
@@ -128,7 +128,7 @@
             <p class="reasons"><b>Then your answer to all this is right here with SINFO! Check down below and be quick to book your presence!</b></p>
 				</div>
 			</div>
-      <div id="reasons" class="column-group gutters">
+      <div id="curricula" class="column-group gutters">
         <div class="all-100">
           <h2>Curricula</h2>
           <p>Every sponsor that acquires a sponsoring pack will be granted one (1)  access to SINFO’s CV database, with CVs from students collected not only during the event but as of this year they are now collected, updated and processed throughout the year.</p>
@@ -515,11 +515,7 @@
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>Logo on tray mats</h3>
-                        <p>The Company logo will be on the tray mats distributed the week before throughout many universities and cafeterias:</p>
-                        <ul>
-                          <li>Every Técnico’s cafeterias;</li>
-                          <li>ISEL, Cidade Universitária and other cafeterias.</li>
-                        </ul>
+                        <p>The Company logo will be on the more than 40.000 tray mats distributed in the weeks prior to SINFO's throughout all bars and cafeterias from all Universities in the Lisbon Area.</p>
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
                             <img src="img/sponsors/individual.JPG">
                         </div>
@@ -857,11 +853,7 @@
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Logo on tray mats</h3>
-                          <p>The Company logo will be on the tray mats distributed the week before throughout many universities and cafeterias:</p>
-                          <ul>
-                            <li>Every Técnico’s cafeterias;</li>
-                            <li>ISEL, Cidade Universitária and other cafeterias.</li>
-                          </ul>
+                          <p>The Company logo will be on the more than 40.000 tray mats distributed in the weeks prior to SINFO's throughout all bars and cafeterias from all Universities in the Lisbon Area.</p>
                           <div class="all-50 medium-60 small-100 tiny-100 push-center">
                               <img src="img/sponsors/individual.JPG">
                           </div>
