Corrected logo on our social network cover's info

--- a/sponsor.html
+++ b/sponsor.html
@@ -545,7 +545,7 @@
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>Logo on our Social Network's cover</h3>
-                        <p>The Company logo will be on our Social Network's cover.</p>
+                        <p>The Company logo will be on our Social Network's cover during the event.</p>
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
                           <img src="img/sponsors/LogoNewsfeed.png">
                         </div>
