--- a/sponsor.html
+++ b/sponsor.html
@@ -557,7 +557,7 @@
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>Logo on our website (everywhere)</h3>
-                        <p>The Company logo will be on SINFO’s website and will be visible on every page and section of the website.</p>
+                        <p>The Company logo will be on SINFO’s website and will be shown on every page and section of the website, allowing it to be viewed by more than 5.000 average monthly visitants.</p>
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
                           <img src="img/sponsors/LogoSiteEv.png">
                         </div>
