--- a/sponsor.html
+++ b/sponsor.html
@@ -565,11 +565,11 @@
                           </td></tr>
                   </tr>
                   <tr class="item alternate">
-                    <td class="firstTd"><div class="toggle">+</div>T-shirt logo</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
+                    <td class="firstTd"><div class="toggle">+</div>Logo T-shirt</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
-                              <h3>T-shirt logo</h3>
-                              <p>The Company logo will be on the back of our t-shirts that are sold at SINFO’s stand during the event.</p>
+                              <h3>Logo T-shirt</h3>
+                              <p>The Company logo will be on the back of our t-shirts that are sold at SINFO’s stand during the event. An average of 300 t-shirts are sold every year.</p>
                               <div class="all-50 medium-60 small-100 tiny-100 push-center">
                                   <img src="img/sponsors/tshirts-rsz.JPG">
                               </div>
