corrected logo during the break of our live stream pic and info

--- a/sponsor.html
+++ b/sponsor.html
@@ -599,9 +599,9 @@
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>Logo during the break of our live stream</h3>
-                        <p>SINFO will be transmitted online through our live stream. The Company will have their logo shown during the transmission's breaks. This offers an additional way of reaching people who couldn't make it to the event</p>
+                        <p>SINFO will be transmitted online through our live stream to more than 20.000 people online and to many of our partner Universities that will transmit SINFO live. The Company will have their logo shown during the transmission breaks. This offers a great way of reaching people who couldn't make it to the event that particular day or at all.</p>
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/liveStream.JPG">
+                            <img src="img/sponsors/liveStream.jpg">
                         </div>
                       </div>
                           </td></tr>
@@ -989,9 +989,9 @@
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Logo during the break of our live stream</h3>
-                          <p>SINFO will be transmitted online through our live stream. The Company will have their logo shown during the transmission's breaks. This offers an additional way of reaching people who couldn't make it to the event</p>
+                          <p>SINFO will be transmitted online through our live stream to more than 20.000 people online and to many of our partner Universities that will transmit SINFO live. The Company will have their logo shown during the transmission breaks. This offers a great way of reaching people who couldn't make it to the event that particular day or at all.</p>
                           <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                              <img src="img/sponsors/liveStream.JPG">
+                              <img src="img/sponsors/liveStream.jpg">
                           </div>
                         </div>
                             </td></tr>
