--- a/sponsor.html
+++ b/sponsor.html
@@ -601,7 +601,7 @@
                               <h3>Logo during the break of our live stream</h3>
                         <p>SINFO will be transmitted online through our live stream to more than 20.000 people online and to many of our partner Universities that will transmit SINFO live. The Company will have their logo shown during the transmission breaks. This offers a great way of reaching people who couldn't make it to the event that particular day or at all.</p>
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/liveStream.jpg">
+                            <img src="img/sponsors/liveStreamPic.jpg">
                         </div>
                       </div>
                           </td></tr>
@@ -643,7 +643,7 @@
                               <h3>Logo on our live stream (static)</h3>
                         <p> The Company logo will be on the live stream as a watermark, on a corner of the live stream during the total duration of it.</p>
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/liveStream.JPG">
+                            <img src="img/sponsors/liveStreamPic.JPG">
                         </div>
                       </div>
                           </td></tr>
@@ -991,7 +991,7 @@
                                 <h3>Logo during the break of our live stream</h3>
                           <p>SINFO will be transmitted online through our live stream to more than 20.000 people online and to many of our partner Universities that will transmit SINFO live. The Company will have their logo shown during the transmission breaks. This offers a great way of reaching people who couldn't make it to the event that particular day or at all.</p>
                           <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                              <img src="img/sponsors/liveStream.jpg">
+                              <img src="img/sponsors/liveStreamPic.jpg">
                           </div>
                         </div>
                             </td></tr>
