Corrected logo on posters info and title

--- a/sponsor.html
+++ b/sponsor.html
@@ -607,11 +607,11 @@
                           </td></tr>
                   </tr>
 									<tr class="item">
-										<td class="firstTd"><div class="toggle">+</div>Logo on our poster</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
+										<td class="firstTd"><div class="toggle">+</div>Logo on posters</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo on our poster</h3>
-												<p>The Company logo will be on our posters that will be hung at Instituto Superior Técnico and in many others Universities in the country.</p>
+								            	<h3>Logo on posters</h3>
+												<p>The Company logo will be present on our more than 500 posters distributed and placed at Instituto Superior Técnico. Additionally with the +University pack, the logo will be present on the more than 1.000 distributed on all our partner Universities such as FCT-UNL, FEUP, FCUL, ISCTE, ISEL, UM, IPCA, among  others.</p>
 											</div>
 							            </td></tr>
 									</tr>
@@ -813,11 +813,11 @@
                             </td></tr>
                     </tr>
                     <tr class="item alternate">
-                      <td class="firstTd"><div class="toggle">+</div>Logo on our poster</td>
+                      <td class="firstTd"><div class="toggle">+</div>Logo on posters</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
-                                <h3>Logo on our poster</h3>
-                          <p>The Company logo will be on our posters that will be hung at Instituto Superior Técnico and in many others Universities in the country.</p>
+                                <h3>Logo on posters</h3>
+                          <p>The Company logo will be present on our more than 500 posters distributed and placed at Instituto Superior Técnico. Additionally with the +University pack, the logo will be present on the more than 1.000 distributed on all our partner Universities such as FCT-UNL, FEUP, FCUL, ISCTE, ISEL, UM, IPCA, among  others.</p>
                         </div>
                             </td></tr>
                     </tr>
