--- a/sponsor.html
+++ b/sponsor.html
@@ -616,11 +616,11 @@
 							            </td></tr>
 									</tr>
                   <tr class="item alternate">
-                    <td class="firstTd"><div class="toggle">+</div>Logo on our pens</td><td>√</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
+                    <td class="firstTd"><div class="toggle">+</div>Logo on pens</td><td>√</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
-                              <h3>Logo on our pens</h3>
-                        <p> The Company logo will be on the pens that we will be giving out during the event.</p>
+                              <h3>Logo on pens</h3>
+                        <p>The Company logo will be on more than 2.000 pens distributed during the event.</p>
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
                           <img src="img/sponsors/caneta-rsz.JPG">
                         </div>
