Corrected custom commercial info

--- a/sponsor.html
+++ b/sponsor.html
@@ -632,7 +632,7 @@
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>Custom commercial</h3>
-                        <p>SINFO will spread the Company’s promos/commercials on the screens scattered all around the event.</p>
+                        <p>SINFO will spread the Company's promos/commercials on the screens scattered all around the event as well as on the live stream breaks.</p>
                       </div>
                           </td></tr>
                   </tr>
@@ -980,7 +980,7 @@
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Custom commercial</h3>
-                          <p>SINFO will spread the Company’s promos/commercials on the screens scattered all around the event.</p>
+                          <p>SINFO will spread the Company's promos/commercials on the screens scattered all around the event as well as on the live stream breaks.</p>
                         </div>
                             </td></tr>
                     </tr>
