Corrected logo on live stream (at all times) info

--- a/sponsor.html
+++ b/sponsor.html
@@ -637,11 +637,11 @@
                           </td></tr>
                   </tr>
                   <tr class="item alternate">
-                    <td class="firstTd"><div class="toggle">+</div>Logo on our live stream (static)</td><td>√</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
+                    <td class="firstTd"><div class="toggle">+</div>Logo on our live stream (At all times)</td><td>√</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
-                              <h3>Logo on our live stream (static)</h3>
-                        <p> The Company logo will be on the live stream as a watermark, on a corner of the live stream during the total duration of it.</p>
+                              <h3>Logo on our live stream (At all times)</h3>
+                        <p> The Company logo will be on the live stream as a watermark for more than 20.000 people to see.</p>
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
                             <img src="img/sponsors/liveStreamPic.JPG">
                         </div>
