Keynote Sponsorship was misspelled

--- a/sponsor.html
+++ b/sponsor.html
@@ -900,7 +900,7 @@
                             </td></tr>
                     </tr>
                     <tr class="item">
-                      <td class="firstTd"><div class="toggle">+</div>Keynote Sponsorshi</td>
+                      <td class="firstTd"><div class="toggle">+</div>Keynote Sponsorship</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
                                 <h3>Keynote Sponsorship</h3>
