Corrected rollup images

--- a/sponsor.html
+++ b/sponsor.html
@@ -199,10 +199,10 @@
                       <p>The Company logo will be on our standard rollup which is used at every event we have throughout the year (workshops, meetups, DevCamps, etc.).</p>
                       <div class="column-group push-center half-gutters">
                           <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/rollupAn.JPG">
+                            <img src="img/sponsors/rollupAnnual.jpg">
                           </div>
                           <div class="all-30 medium-30 small-50 tiny-50 push-center">
-                            <img src="img/sponsors/rollupAn2.JPG">
+                            <img src="img/sponsors/rollupAnnual2.jpg">
                           </div>
                         </div>
                     </div>
@@ -700,10 +700,10 @@
                             <p>The Company logo will be on our standard rollup which is used at every event we have throughout the year (workshops, meetups, DevCamps, etc.).</p>
                             <div class="column-group push-center half-gutters">
                                 <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                                  <img src="img/sponsors/rollupAn.JPG">
+                                  <img src="img/sponsors/rollupAnnual.jpg">
                                 </div>
                                 <div class="all-30 medium-30 small-50 tiny-50 push-center">
-                                  <img src="img/sponsors/rollupAn2.JPG">
+                                  <img src="img/sponsors/rollupAnnual2.jpg">
                                 </div>
                               </div>
                           </div>
