Added dinner with ... description title

--- a/sponsor.html
+++ b/sponsor.html
@@ -255,9 +255,10 @@
                         </td></tr>
                 </tr>
                 <tr class="item">
-                  <td class="firstTd"><div class="toggle">+</div>Dinner with senior students and </br> members of SINFO’s team</td><td>1</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
+                  <td class="firstTd"><div class="toggle">+</div> Dinner with senior students and members of SINFO's team</td><td>1</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
                         <tr class="description"><td colspan="5" class="noPadding">
                           <div class="shadow">
+                            <h3>Dinner with senior students and members of SINFO's team</h3>
                             <p>The Company will be able to host a private dinner with several seniors recruited according to the Company’s interest, as well as senior members of SINFO’s team.</p>
                     </div>
                         </td></tr>
