Changed price style

--- a/sponsor.html
+++ b/sponsor.html
@@ -263,15 +263,12 @@
                     </div>
                         </td></tr>
                 </tr>
+                <tr class="alterprice">
+                  <td class="firstTd">Individual Price</td><td>6.750€</td><td>3.975€</td><td>2.250€</td><td>1.200€</td>
+                </tr>
 								<tr class="price">
-									<td class="firstTd">Price</td><td>3.500€</td><td>2.500€</td><td>1.500€</td><td>1.000€</td>
+									<td class="firstTd">Price</td><td>3.500€<sup> -3.250€</sup></td><td>2.500€<sup> -1.475€</sup></td><td>1.500€<sup> -750€</sup></td><td>1.000€<sup> -200€</sup></td>
 								</tr>
-								<tr class="alterprice">
-									<td class="firstTd">Individual Price</td><td>6.750€</td><td>3.975€</td><td>2.250€</td><td>1.200€</td>
-								</tr>
-                <tr class="discount">
-                    <td class="firstTd">Discount</td><td>3.250€</td><td>1.475€</td><td>750€</td><td>200€</td>
-                  </tr>
 								</tbody>
 							</table>
 						</div>
@@ -390,14 +387,11 @@
                       </div>
                    </td></tr>
                   </tr>
-									<tr class="price">
-										<td class="firstTd">Price</td><td>3.750€</td><td>2.500€</td><td>1.750€</td><td>1.250€</td>
-									</tr>
 									<tr class="alterprice">
 										<td class="firstTd">Individual Price</td><td>7.655€</td><td>4.595€</td><td>2.660€</td><td>1.360€</td>
 									</tr>
-                  <tr class="discount">
-                    <td class="firstTd">Discount</td><td>3.905€</td><td>2.095€</td><td>910€</td><td>110€</td>
+                  <tr class="price">
+                    <td class="firstTd">Price</td><td>3.750€<sup> -3.905€</sup></td><td>2.500€<sup> -2.095€</sup></td><td>1.750€<sup> -910€</sup></td><td>1.250€<sup> -110€</sup></td>
                   </tr>
                   <tr class="choose">
                      <td class="firstTd" colspan="5">* Choose just one: either a presentation or 2 days of stand.</td>
@@ -649,14 +643,11 @@
                       </div>
                           </td></tr>
                   </tr>
-									<tr class="price">
-										<td class="firstTd">Price</td><td>2.500€</td><td>1.500€</td><td>600€</td><td>450€</td>
-									</tr>
 									<tr class="alterprice">
 										<td class="firstTd">Individual Price</td><td>3.505€</td><td>2.095€</td><td>910€</td><td>610€</td>
 									</tr>
-                  <tr class="discount">
-                    <td class="firstTd">Discount</td><td>855€</td><td>595€</td><td>310€</td><td>160€</td>
+                  <tr class="price">
+                    <td class="firstTd">Price</td><td>2.500€<sup> -855€</sup></td><td>1.500€<sup> -595€</sup></td><td>600€<sup> -310€</sup></td><td>450€<sup> -160€</sup></td>
                   </tr>
 									</tbody>
 								</table>
