Corrected Advertising title AGAIN

--- a/sponsor.html
+++ b/sponsor.html
@@ -349,7 +349,7 @@
                           </td></tr>
                   </tr>
                   <tr class="item redirectPub">
-                    <td class="firstTd"><div class="toggle">+</div>Publicity Package</td><td>Exclusive</td><td>Maximum</td><td>Medium</td><td>Minimum</td></a>
+                    <td class="firstTd"><div class="toggle">+</div>Advertising Package</td><td>Exclusive</td><td>Maximum</td><td>Medium</td><td>Minimum</td></a>
                   </tr>
                   <tr class="item alternate">
                     <td class="firstTd"><div class="toggle">+</div> + University pack</td><td>1</td><td>1</td><td>1</td><td class="notIncluded">x</td>
@@ -421,7 +421,7 @@
 									</tbody>
 								</table>
 							</div>
-							<div class="heading" id="Publicity"><div class="toggleHead">+</div>Publicity</div>
+							<div class="heading" id="Publicity"><div class="toggleHead">+</div>Advertising</div>
 							<div class="content">
 								<div class="PackageContent">Package Content</div>
 								<table class="all-100">
